--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 
 
 <body>
+     <!-- Preloader -->
+    <div id="preloader">
+        <img src="images/logo-made4u.png" alt="Made4U Logo" class="loader-logo">
+        <div class="loader-progress">
+            <div class="loader-progress-bar"></div>
+        </div>
+    </div>
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
         <div class="container nav-container">
