--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css" />
+ <!-- Font Awesome pour les icônes -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
 
@@ -64,6 +66,19 @@
         <p class="hero-subtitle"> Sublimez vos espaces avec des solutions uniques et élégantes, adaptées à vos envies</p>
         <a href="#apropos" class="btn btn-primary">Découvrir Notre Expertise</a>
     </div>
+
+    <!-- Réseaux sociaux dans le hero -->
+<div class="hero-social">
+    <a href="https://www.facebook.com/votrepage" target="_blank" aria-label="Facebook">
+        <i class="fab fa-facebook-f"></i>
+    </a>
+    <a href="https://www.instagram.com/votrepage" target="_blank" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://www.tiktok.com/@votrepage" target="_blank" aria-label="TikTok">
+        <i class="fab fa-tiktok"></i>
+    </a>
+</div>
     <div class="scroll-indicator">
         <span></span>
     </div>
@@ -269,9 +284,9 @@
                         <p>Av Kiffah bloc AH N8 - Rabat - CYM</p>
                     </div>
                     <div class="contact-item">
-                        <strong>Téléphone:</strong>
-                        <p>+212 661-256523</p>
-                    </div>
+    <strong>Téléphone:</strong>
+    <p><a href="tel:+212661256523">+212 661-256523</a></p>
+</div>
                     <div class="contact-item">
                         <strong>Email:</strong>
                         <p>contact@made4u.ma</p>
@@ -304,9 +319,20 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-col">
-                    <h4>Made4U</h4>
-                    <p>Votre partenaire de confiance pour tous vos projets de revêtement et d'aménagement.</p>
-                </div>
+    <h4>Made4U</h4>
+    <p>Votre partenaire de confiance pour tous vos projets de revêtement et d'aménagement.</p>
+    <div class="footer-social">
+        <a href="https://www.facebook.com/votrepage" target="_blank" aria-label="Facebook">
+            <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com/votrepage" target="_blank" aria-label="Instagram">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.tiktok.com/@votrepage" target="_blank" aria-label="TikTok">
+            <i class="fab fa-tiktok"></i>
+        </a>
+    </div>
+</div>
                 <div class="footer-col">
                     <h4>Navigation</h4>
                     <ul>
