--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                 <li class="dropdown">
                     <a href="#produits" class="nav-link">Nos Produits</a>
                     <ul class="dropdown-menu">
-                        <li><a href="#exterieur">Produits Extérieur</a></li>
-                        <li><a href="#interieur">Produits Intérieur</a></li>
-                        <li><a href="#revetement">Revêtement du Sol</a></li>
+                    <li><a href="produits-exterieur.html">Produits Extérieur</a></li>
+                    <li><a href="produits-interieur.html">Produits Intérieur</a></li>
+                    <li><a href="revetement-sol.html">Revêtement du Sol</a></li>
                     </ul>
                 </li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
