page produits exterieur v1

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <div class="product-overlay">
                     <h3>PRODUITS EXTÉRIEUR</h3>
                     <p>Stores bannes, pergolas bioclimatiques et protections solaires conçues pour résister aux intempéries tout en embellissant votre extérieur avec style et durabilité.</p>
-                    <a href="#contact" class="btn btn-secondary">En savoir plus</a>
+                    <a href="produits-exterieur.html" class="btn btn-secondary">En savoir plus</a>
                 </div>
             </div>
             
