page produits interieur / revetement du sol

--- a/produits-exterieur.html
+++ b/produits-exterieur.html
@@ -74,6 +74,19 @@
         <a href="#produits-section" class="btn btn-primary">Découvrir Nos Produits</a>
     </div>
     
+    <!-- Réseaux sociaux dans le hero -->
+<div class="hero-social">
+    <a href="https://www.facebook.com/p/Khiyam-achatie-61566368161147/" target="_blank" aria-label="Facebook">
+        <i class="fab fa-facebook-f"></i>
+    </a>
+    <a href="https://www.instagram.com/khiyam_achatie/" target="_blank" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://www.tiktok.com/@khiyam_achatie" target="_blank" aria-label="TikTok">
+        <i class="fab fa-tiktok"></i>
+    </a>
+</div>
+
     <!-- Scroll Indicator -->
     <div class="scroll-indicator">
         <span></span>
@@ -326,16 +339,16 @@
                     <h4>Made4U</h4>
                     <p>Votre partenaire de confiance pour tous vos projets de revêtement et d'aménagement.</p>
                     <div class="footer-social">
-                        <a href="https://www.facebook.com/votrepage" target="_blank" aria-label="Facebook">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="https://www.instagram.com/votrepage" target="_blank" aria-label="Instagram">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="https://www.tiktok.com/@votrepage" target="_blank" aria-label="TikTok">
-                            <i class="fab fa-tiktok"></i>
-                        </a>
-                    </div>
+        <a href="https://www.facebook.com/p/Khiyam-achatie-61566368161147/" target="_blank" aria-label="Facebook">
+            <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com/khiyam_achatie/" target="_blank" aria-label="Instagram">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.tiktok.com/@khiyam_achatie" target="_blank" aria-label="TikTok">
+            <i class="fab fa-tiktok"></i>
+        </a>
+    </div>
                 </div>
                 <div class="footer-col">
                     <h4>Navigation</h4>
@@ -369,6 +382,12 @@
             </div>
         </div>
     </footer>
+<!-- Bouton Retour en haut -->
+<button onclick="topFunction()" id="myBtn" title="Retour en haut">
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <path d="M12 19V5M5 12l7-7 7 7"/>
+    </svg>
+</button>
 
     <script src="script.js"></script>
     <script src="produits-exterieur.js"></script>
